# CutieRoto

./: LICENSE  README.md
000_CutieInstallGuide/: environment.yml  pip-freeze.txt  readme.md
001_PREP/: build_engine.py  build_mask_decoder.py  build_mask_encoder.py  build_transform_key.py  cutie_mask_propagate.py  dump_memory_read_case.py  export_encode_image.py  export_mask_decoder.py  export_mask_encoder.py  export_transform_key.py  memory_read_reference.py  readme.md  trace_fusion_transformer.py  trt_decoder_hook.py  trt_feature_store.py  trt_mask_encoder_hook.py  validate_pathb_insitu.py
002_CPP/: CMakeLists.txt  readme.md
002_CPP/include/: CutieRoto.h  embedded_assets.h
002_CPP/linkage_smoke_test/: CMakeLists_smoke.txt  linkage_smoke.cpp
002_CPP/src/: CutieRoto.cpp  memory_core.cpp  trt_engine.cpp
002_CPP/src/tests/: test_embedded.cpp  test_memory.cpp
003_CPP_Libtorch/: CMakeLists.txt  readme.md  trace_all_stages.py
003_CPP_Libtorch/WINDOWS/: CMakeLists.txt  stepbystep.txt
003_CPP_Libtorch/WINDOWS/include/: CutieRoto.h  embedded_assets.h  trt_engine.h
003_CPP_Libtorch/WINDOWS/src/: CutieRoto.cpp  memory_core.cpp
003_CPP_Libtorch/WINDOWS/src/tests/: test_engines.cpp
003_CPP_Libtorch/include/: CutieRoto.h  torch_engine.h
003_CPP_Libtorch/src/: CutieRoto.cpp  torch_engine.cpp
004_CPP_Libtorch/: CMakeLists.txt  STEPBYSTEP_Cutie  readme.md
004_CPP_Libtorch/include/: CutieRoto.h  memory_core.h
004_CPP_Libtorch/src/: CutieRoto.cpp  torch_engine.cpp
004_CPP_Libtorch/src/tests/: test_cache_race.cpp  test_torch_embedded.cpp
005_CPP_Libtorch_MPS/: CMakeLists.txt  README.md  environment.mac.yml  trace_all_stages_mps.py  trace_fusion_transformer_mps.py
005_CPP_Libtorch_MPS/include/: CutieRoto.h  embedded_assets.h  torch_engine.h
005_CPP_Libtorch_MPS/src/: CutieRoto.cpp  embedded_assets_mac.S.in  memory_core.cpp  torch_engine.cpp
